удалил файл с вопросами, теперь приходят с сервера
