# src/services/api/models/UserResult.ts
@@ -1,0 +1,83 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pretendent backend
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    Answer,
+    AnswerFromJSON,
+    AnswerFromJSONTyped,
+    AnswerToJSON,
+    User,
+    UserFromJSON,
+    UserFromJSONTyped,
+    UserToJSON,
+} from './';
+
+/**
+ * 
+ * @export
+ * @interface UserResult
+ */
+export interface UserResult {
+    /**
+     * 
+     * @type {User}
+     * @memberof UserResult
+     */
+    user?: User;
+    /**
+     * Percentage of correct answers
+     * @type {number}
+     * @memberof UserResult
+     */
+    readonly percent?: number;
+    /**
+     * 
+     * @type {Array<Answer>}
+     * @memberof UserResult
+     */
+    answers?: Array<Answer>;
+}
+
+export function UserResultFromJSON(json: any): UserResult {
+    return UserResultFromJSONTyped(json, false);
+}
+
+export function UserResultFromJSONTyped(json: any, ignoreDiscriminator: boolean): UserResult {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'user': !exists(json, 'user') ? undefined : UserFromJSON(json['user']),
+        'percent': !exists(json, 'percent') ? undefined : json['percent'],
+        'answers': !exists(json, 'answers') ? undefined : ((json['answers'] as Array<any>).map(AnswerFromJSON)),
+    };
+}
+
+export function UserResultToJSON(value?: UserResult | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'user': UserToJSON(value.user),
+        'answers': value.answers === undefined ? undefined : ((value.answers as Array<any>).map(AnswerToJSON)),
+    };
+}
+
+
